<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="info.trustzone.androidlogs.MainActivity">

    <TextView
        android:id="@+id/textHelloWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Hello World!"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textVersion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHelloWorld" />

    <Button
        android:id="@+id/WriteLog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnWriteLog"
        android:text="@string/button_writelog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textVersion" />

    <Button
        android:id="@+id/TryCatch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:onClick="btnTryCatch"
        android:text="@string/button_trycatch"
        app:layout_constraintBaseline_toBaselineOf="@+id/WriteLog_btn"
        app:layout_constraintStart_toEndOf="@+id/WriteLog_btn" />

    <Button
        android:id="@+id/activity_home_btn_nocatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="btnErrorNoCatch"
        android:text="@string/activity_home_btn_nocatch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WriteLog_btn" />

    <Button
        android:id="@+id/activity_home_function_doingcatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:onClick="btnFunctionDoingCatch"
        android:text="@string/activity_home_btn_func_doing_thecatch"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_home_btn_nocatch"
        app:layout_constraintStart_toEndOf="@+id/activity_home_btn_nocatch" />

    <Button
        android:id="@+id/activity_home_throwcustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="btnThrowCustomError"
        android:text="@string/activity_home_btn_throwcustom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_home_btn_nocatch" />

</android.support.constraint.ConstraintLayout>
